--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,27 @@
+:root {
+  --primary-color: #9ba17b;
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+body {
+  color: #39a6b2;
 }
 header {
   padding: 20px 35px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  background: var(--primary-color);
 }
+header h1 {
+  font-weight: bold;
+  font-size: 36px;
+  margin: 0;
+}
+
 header nav ul {
   display: flex;
   justify-content: center;
@@ -19,4 +32,15 @@ header nav ul {
 header nav ul li a {
   padding: 30px 35px;
   font-size: 1.55vw;
+}
+
+.hero {
+  height: 400px;
+  background-image: url("../images/hero.jpg");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  position: relative;
 }
