--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 :root {
   --primary-color: #9ba17b;
+  --secondary-color: #412b15;
+  --tertiary-color: #fffdd0;
 }
 * {
   margin: 0;
@@ -7,7 +9,8 @@
   box-sizing: border-box;
 }
 body {
-  color: #39a6b2;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
 }
 header {
   padding: 20px 35px;
@@ -15,13 +18,19 @@ header {
   justify-content: space-between;
   flex-wrap: wrap;
   background: var(--primary-color);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 header h1 {
   font-weight: bold;
   font-size: 36px;
   margin: 0;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
-
+header nav {
+  margin: 7px 0;
+}
 header nav ul {
   display: flex;
   justify-content: center;
@@ -32,6 +41,19 @@ header nav ul {
 header nav ul li a {
   padding: 30px 35px;
   font-size: 1.55vw;
+  text-decoration: none;
+  color: var(--secondary-color);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  background-size: 50px;
+}
+header nav ul li a:hover {
+  color: var(--tertiary-color);
+  background: var(--secondary-color);
+  border-radius: 15px;
+  transition-duration: 0.5s;
+}
+section {
+  padding: 10px;
 }
 
 .hero {
@@ -40,7 +62,39 @@ header nav ul li a {
   background-size: cover;
   background-position: center;
   display: flex;
-  justify-content: flex-end;
+  justify-content: start;
+  align-items: center;
   flex-wrap: wrap;
   position: relative;
+}
+.hero h2 {
+  font-style: italic;
+  font-size: 20px;
+  color: var(--primary-color);
+  margin-top: 400px;
+}
+.profile {
+  padding: 30px;
+  border: 1px solid var(--primary-color);
+  width: auto;
+}
+.about {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  flex-wrap: wrap;
+  border-bottom: 1px solid #fffdd0;
+  border-bottom-width: 50%;
+}
+.step-text p {
+  color: var(--secondary-color);
+  font-size: 15px;
+  margin-left: 30px;
+}
+
+.step-info {
+  flex: 2 20%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
