--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ section {
   display: inline;
 }
 .step-text p {
-  padding: 10px 0 0 0;
+  padding: 30px 0 0 0;
   color: var(--secondary-color);
   font-size: 20px;
   margin-left: 30px;
@@ -105,4 +105,16 @@ section {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+}
+.work {
+  padding: 100px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.run-buddy-app {
+  padding: 30px 0 0 0;
+}
+.run-buddy-app:hover {
 }
