--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 9999;
 }
 header h1 {
   font-weight: bold;
@@ -117,4 +118,93 @@ section {
   padding: 30px 0 0 0;
 }
 .run-buddy-app:hover {
+}
+.contact {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.contact-info {
+  justify-content: space-between;
+}
+.contact-info ul {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  margin-left: 15px;
+  width: 100%;
+}
+.contact-info ul li a {
+  margin: 0 30px;
+  font-size: 18px;
+  color: var(--secondary-color);
+  text-decoration: none;
+  border-bottom: 3px solid;
+  padding-bottom: 2px;
+}
+
+@media screen and (max-width: 980px) {
+  header {
+    padding-bottom: 10px;
+    justify-content: center;
+  }
+
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
+
+  header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+    flex-direction: row;
+    line-height: 1.5;
+  }
+
+  header nav ul li a {
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  .hero {
+    background-size: cover;
+  }
+
+  .image2 {
+    height: 100px;
+    width: 100px;
+  }
+  .hero h2 {
+    font-size: 10px;
+    margin-top: 350px;
+  }
+  .run-buddy-app {
+    align-items: center;
+  }
+  .step-text p {
+    width: 85%;
+  }
+
+  .section-title {
+    width: 100%;
+    text-align: right;
+    font-weight: bold;
+  }
+
+  .container {
+    width: 100%;
+  }
+  .contact-info ul {
+    width: 100%;
+    justify-content: left;
+    flex-direction: column;
+  }
+
+  .contact-info ul li a {
+    font-size: 18px;
+    line-height: 2;
+    font-weight: bold;
+  }
 }
